tests/Checker/everything/errors/17b.vc
int main() {
    int a[3] = {1, 2, 3};
    a[true];
    return 1;
}
